# book_podcast_fiction_generator

./: .env.example  .gitignore  09-how-to-write-specs.md  1.docx  AGENTS.md  CLAUDE.md  CODE_BASE_AUDIT.md  EXPLORATION_PREFERENCES.md  HANDOFF.md  QWEN.md  analysis_report.md  build_specs.md  code_facts_report.md  code_facts_report_transport.md  fix_specsv2.md  friendly_user_guide.md  implementation_report.md  initial_build.md  initial_build_specsv1.md  initial_readme.md  menu.py  pyproject.toml  user_manual.md  vision.md
src/: .gitignore  README.md  config.json  config.py  path_utils.py  pyproject.toml  run_chapter.py  settings.py
src/cli/: fiction.py  podcast.py
src/docs/: handoff.md  important_for_specs.md  podcast_llm_readme.md
src/endpoints/: fiction.py  podcast.py  podcast_types.py  slicer.py
src/engines/: factory.py  llm_script.py  pdf_splitter.py  protocols.py  wavespeed_audio.py
src/format_adapters/: __init__.py  epub.py  epub_splitter.py  pdf.py  registry.py
src/llm/: env.py  exceptions.py  factory.py  protocol.py
src/novel_pipeline/: __init__.py  api.py  cli.py  config.py  cost.py  docs.py  exceptions.py  logging_.py  prompt.py  prompts.py  requests_.py  session.py  state.py  tokens.py
src/phases/: structure.md
src/slicer/: pdf_splitter.py
src/tests/: conftest.py  test_chapter_discovery.py  test_cli_fiction.py  test_cli_podcast.py  test_endpoint_book_podcast.py  test_endpoint_chapter_podcast.py  test_engines.py  test_epub_extractor.py  test_epub_splitter.py  test_format_aware_extractor.py  test_llm_factory.py  test_menu_format_agnostic.py  (+9 more)
(+358 files in other folders)
