[project]
name = "harness"
version = "0.1.0"
description = "Fiction and podcast generation pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "wavespeed>=1.0.8",
    "requests>=2.31",
    "tiktoken>=0.7.0",
    "typing-extensions>=4.15.0",
    "python-dotenv>=1.2.2",
    "ocrmypdf>=16.0.0",
    "ebooklib>=0.18",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["settings", "config"]

[tool.setuptools.packages.find]
where = ["."]
exclude = [".venv*", "*.tests*", "*.test*"]
